[gd_scene load_steps=10 format=3 uid="uid://chdm43dmk3ehh"]

[ext_resource type="Script" uid="uid://b3fkdnxbbhrvq" path="res://scripts/closing_lore.gd" id="1_gchw4"]
[ext_resource type="VideoStream" uid="uid://b0kjw1ricwc3f" path="res://assets/images/UI/end.ogv" id="2_0d1qs"]
[ext_resource type="VideoStream" uid="uid://cc3a5fbgf0yx" path="res://assets/images/UI/1109_1.ogv" id="3_pt5vn"]
[ext_resource type="AudioStream" uid="uid://b4td8qrae5uvr" path="res://assets/audio/new one.wav" id="4_pt5vn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jryo0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_gchw4"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0d1qs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jryo0"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jryo0"]
_data = {
&"RESET": SubResource("Animation_0d1qs"),
&"fade_in": SubResource("Animation_gchw4"),
&"fade_out": SubResource("Animation_jryo0")
}

[node name="ClosingLore" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gchw4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="Panel" type="Panel" parent="CanvasLayer/SubViewportContainer/SubViewport"]
offset_right = 640.0
offset_bottom = 360.0

[node name="FirstVideo" type="VideoStreamPlayer" parent="CanvasLayer/SubViewportContainer/SubViewport/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_0d1qs")
expand = true

[node name="SecondVideo" type="VideoStreamPlayer" parent="CanvasLayer/SubViewportContainer/SubViewport/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_pt5vn")
expand = true

[node name="Black" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jryo0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Black"]
libraries = {
&"": SubResource("AnimationLibrary_jryo0")
}
autoplay = "fade_out"

[node name="Length" type="Timer" parent="."]
wait_time = 17.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pt5vn")
volume_db = -10.0
autoplay = true

[connection signal="finished" from="CanvasLayer/SubViewportContainer/SubViewport/Panel/FirstVideo" to="." method="_on_first_video_finished"]
[connection signal="animation_finished" from="Black/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Length" to="." method="_on_length_timeout"]
